[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Top_UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Ending.tscn" type="PackedScene" id=4]
[ext_resource path="res://top-ui-theme.tres" type="Theme" id=5]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Menus.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/level-1-map.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Totals.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Dialog_Panel.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.5, 786 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 562, 35 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 44, 62.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 801.5, 52 )

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="Map" type="Sprite" parent="."]
position = Vector2( 511, 269 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="StaticBody2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( -21.5, -262 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 1044, -262 )
shape = SubResource( 1 )

[node name="Floor" type="StaticBody2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 512, 485 )
shape = SubResource( 2 )

[node name="Door" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( 979, 350.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Door"]
position = Vector2( 514.5, 599 )
shape = SubResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 118, 438 )

[node name="Top_UI" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 1.0

[node name="Goal" type="Label" parent="."]
margin_left = 952.0
margin_top = 239.0
margin_right = 999.0
margin_bottom = 280.0
theme = ExtResource( 5 )
text = "Goal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog_Panel" parent="." instance=ExtResource( 10 )]

[node name="Pause_Btn" type="Button" parent="."]
margin_left = 856.0
margin_top = 6.0
margin_right = 998.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menus" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="Ending" parent="Menus" instance=ExtResource( 4 )]
pause_mode = 2
margin_left = -5.0
margin_top = -35.0
margin_right = -5.0
margin_bottom = -35.0

[node name="Pause" parent="Menus" instance=ExtResource( 3 )]

[node name="Totals" parent="Menus" instance=ExtResource( 9 )]
visible = false
margin_left = -6.0
margin_top = -37.0
margin_right = -6.0
margin_bottom = -37.0

[node name="Box_Spawn" type="Node2D" parent="."]

[connection signal="body_entered" from="Door" to="." method="_on_Door_body_entered"]
[connection signal="pressed" from="Pause_Btn" to="." method="_on_Pause_Btn_pressed"]
